fix about us text alignment

--- a/styles/_about_us.scss
+++ b/styles/_about_us.scss
@@ -20,10 +20,6 @@
     .profile-card:last-of-type {
       margin-left: 4vw;
     }
-
-    
-    p {
-    }
   }
 
   h3 {
@@ -38,5 +34,10 @@
   h2 {
     margin-inline: auto;
     margin-top: 2rem;
+  }
+
+
+  p {
+    margin-inline: auto;
   }
 }
